--- a/app/src/main/res/layout/input.xml
+++ b/app/src/main/res/layout/input.xml
@@ -42,12 +42,13 @@
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:layout_marginStart="16dp"
+            android:layout_marginTop="36dp"
             android:layout_marginEnd="16dp"
             android:clickable="true"
             android:contentDescription="@string/enter_initial_location"
             android:focusable="true"
-            app:layout_constraintBottom_toTopOf="@+id/imageView4"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/initial" />
@@ -58,14 +59,14 @@
             android:layout_height="48dp"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginBottom="28dp"
             android:clickable="true"
             android:contentDescription="@string/enter_desired_location"
             android:focusable="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/initialInputButton"
             app:srcCompat="@drawable/desired" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
