--- a/app/src/main/res/layout/selected_route.xml
+++ b/app/src/main/res/layout/selected_route.xml
@@ -122,6 +122,14 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="TextView"
+                tools:layout_editor_absoluteX="23dp"
+                tools:layout_editor_absoluteY="84dp" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <TextView
@@ -157,14 +165,16 @@
 
         <com.google.android.gms.maps.MapView
             android:id="@+id/mapView3"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_width="308dp"
+            android:layout_height="262dp"
             android:layout_marginTop="36dp"
             android:contentDescription="@string/map_view"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/constraintLayout4" />
+            app:layout_constraintTop_toBottomOf="@+id/constraintLayout4"
+            app:layout_constraintVertical_bias="1.0" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
