--- a/app/src/main/res/layout/listofjeeps.xml
+++ b/app/src/main/res/layout/listofjeeps.xml
@@ -27,12 +27,29 @@
         android:layout_width="156dp"
         android:layout_height="31dp"
         android:text="List of Jeeps"
-        android:textSize="16sp"
+        android:textSize="24sp"
+        android:gravity="center"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.037" />
+
+    <ImageView
+        android:id="@+id/back_button2"
+        android:layout_width="50dp"
+        android:layout_height="48dp"
+        android:clickable="true"
+        android:contentDescription="@string/back_button"
+        android:focusable="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.019"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.013"
+        app:srcCompat="@drawable/baseline_arrow_back_24" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
