--- a/app/src/main/res/layout/suggested_routes.xml
+++ b/app/src/main/res/layout/suggested_routes.xml
@@ -17,17 +17,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
-            android:id="@+id/back_button"
-            android:layout_width="39dp"
-            android:layout_height="36dp"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="48dp"
-            android:contentDescription="@string/back_button"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/baseline_arrow_back_24" />
-
         <AutoCompleteTextView
             android:id="@+id/initialInputText"
             android:layout_width="match_parent"
@@ -36,7 +25,6 @@
             android:layout_marginEnd="31dp"
             android:autofillHints="None"
             android:background="#9ADDC1"
-            android:completionHint="address"
             android:ems="10"
             android:fontFamily="@font/poppins_new"
             android:hint="@string/enter_location"
@@ -53,7 +41,7 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.582" />
+            app:layout_constraintVertical_bias="0.338" />
 
         <AutoCompleteTextView
             android:id="@+id/initialDesiredText"
@@ -75,29 +63,39 @@
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.685"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.92" />
+            app:layout_constraintVertical_bias="0.641" />
 
-        <Button
-            android:id="@+id/mapButton"
-            android:layout_width="134dp"
+        <ImageView
+            android:id="@+id/back_button2"
+            android:layout_width="50dp"
             android:layout_height="48dp"
-            android:layout_marginStart="175dp"
-            android:layout_marginEnd="31dp"
-            android:backgroundTint="#9ADDC1"
-            android:fontFamily="@font/poppins_new"
-            android:text="@string/open_map"
-            android:textAlignment="center"
-            android:textAllCaps="false"
-            android:textColor="@color/black"
+            android:clickable="true"
+            android:contentDescription="@string/back_button"
+            android:focusable="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toEndOf="@+id/back_button"
+            app:layout_constraintHorizontal_bias="0.016"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.238" />
+            app:layout_constraintVertical_bias="0.034"
+            app:srcCompat="@drawable/baseline_arrow_back_24" />
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="156dp"
+            android:layout_height="31dp"
+            android:gravity="center"
+            android:text="List of Jeeps"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/initialDesiredText" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -107,6 +105,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:background="@color/white"
+
         app:layout_constraintTop_toBottomOf="@id/constraintLayout2"
         app:layout_constraintBottom_toBottomOf="parent">
 
@@ -119,7 +118,8 @@
                 android:id="@+id/constraintLayout3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/white">
+                android:background="@color/white"
+                android:visibility="invisible">
 
                 <TextView
                     android:id="@+id/code"
@@ -217,6 +217,8 @@
                     android:layout_height="wrap_content"
                     app:barrierDirection="left"
                     app:constraint_referenced_ids="constraintLayout3" />
+
+
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
