--- a/app/src/main/res/layout/history.xml
+++ b/app/src/main/res/layout/history.xml
@@ -10,7 +10,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout2"
         android:layout_width="match_parent"
-        android:layout_height="98dp"
+        android:layout_height="50dp"
         android:layout_marginBottom="13dp"
         android:background="@color/white"
         android:textAlignment="center"
@@ -20,34 +20,18 @@
 
         <ImageView
             android:id="@+id/back_button"
-            android:layout_width="38dp"
-            android:layout_height="36dp"
-            android:layout_marginStart="16dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:clickable="true"
             android:contentDescription="@string/back_button"
             android:focusable="true"
-            app:layout_constraintBottom_toBottomOf="@+id/textView"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/textView"
-            app:srcCompat="@drawable/baseline_arrow_back_24" />
-
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="67dp"
-            android:layout_marginTop="34dp"
-            android:layout_marginEnd="138dp"
-            android:layout_marginBottom="32dp"
-            android:fontFamily="@font/poppins_new"
-            android:text="@string/travel_history"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/back_button"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintHorizontal_bias="0.054"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.384"
+            app:srcCompat="@drawable/baseline_arrow_back_24" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -55,7 +39,8 @@
         android:id="@+id/scrollView3"
         android:layout_width="match_parent"
         android:layout_height="710dp"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="52dp"
+        android:background="#C1EAD9"
         app:layout_constraintTop_toTopOf="@+id/constraintLayout2"
         tools:layout_editor_absoluteX="0dp">
 
@@ -67,9 +52,11 @@
             <TextView
                 android:id="@+id/textView2"
                 android:layout_width="wrap_content"
-                android:layout_height="25dp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
                 android:layout_marginBottom="15dp"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"
                 android:background="#5CC297"
                 android:text="@string/route_date"
                 android:textAlignment="center"
@@ -79,7 +66,7 @@
                 android:id="@+id/constraintLayout3"
                 android:layout_width="match_parent"
                 android:layout_height="97dp"
-                android:background="@color/white">
+                android:background="@drawable/round_border_white">
 
 
                 <TextView
