--- a/app/src/main/res/layout/input.xml
+++ b/app/src/main/res/layout/input.xml
@@ -33,7 +33,7 @@
             android:layout_marginStart="31dp"
             android:layout_marginEnd="31dp"
             android:autofillHints="None"
-            android:background="#9ADDC1"
+            android:background="@drawable/rounded_border"
             android:ems="10"
             android:fontFamily="@font/poppins_new"
             android:hint="@string/enter_location"
@@ -59,7 +59,7 @@
             android:layout_marginStart="32dp"
             android:layout_marginEnd="31dp"
             android:autofillHints="None"
-            android:background="#9ADDC1"
+            android:background="@drawable/rounded_border"
             android:ems="10"
             android:fontFamily="@font/poppins_new"
             android:hint="@string/enter_destination"
@@ -79,17 +79,17 @@
 
         <ImageView
             android:id="@+id/back_button2"
-            android:layout_width="50dp"
-            android:layout_height="48dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:clickable="true"
             android:contentDescription="@string/back_button"
             android:focusable="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.016"
+            app:layout_constraintHorizontal_bias="0.114"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.034"
+            app:layout_constraintVertical_bias="0.079"
             app:srcCompat="@drawable/baseline_arrow_back_24" />
 
         <Button
@@ -97,6 +97,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Find Jeep"
+            android:backgroundTint="#5CC297"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
