--- a/app/src/main/res/layout/suggested_routes.xml
+++ b/app/src/main/res/layout/suggested_routes.xml
@@ -24,7 +24,7 @@
             android:layout_marginStart="31dp"
             android:layout_marginEnd="31dp"
             android:autofillHints="None"
-            android:background="#9ADDC1"
+            android:background="@drawable/rounded_border"
             android:ems="10"
             android:fontFamily="@font/poppins_new"
             android:hint="@string/enter_location"
@@ -50,7 +50,7 @@
             android:layout_marginStart="32dp"
             android:layout_marginEnd="31dp"
             android:autofillHints="None"
-            android:background="#9ADDC1"
+            android:background="@drawable/rounded_border"
             android:ems="10"
             android:fontFamily="@font/poppins_new"
             android:hint="@string/enter_destination"
